Fixed table overflow (#30)
* Fixed table overflow

--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -349,6 +349,10 @@
           }
         }
       }
+
+      &-table {
+        overflow: auto;
+      }
     }
   }
 }
